# scrape_providers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/capture/: README.md  capture-claude-code.sh  capture-codex.sh  capture-opencode.sh  capture_tools.py  common.sh
src/scrape_providers/: __init__.py  agent_profiles.py  arena.py  base.py  canonical.py  catalog.schema.json  cli.py  curation.py  emit.py  models.py  oss.py  registry.py  schema.py  tools.py
src/scrape_providers/agent_prompts/: README.md  claude_code.txt  codex.txt  opencode.txt
src/scrape_providers/agent_schemas/: README.md  claude_code.json  codex.json  opencode.json
src/scrape_providers/providers/: __init__.py  anthropic.py  deepseek.py  google.py  openai.py  openrouter.py
tests/: test_pipeline.py
