[project]
name = "scrape-providers"
version = "0.1.0"
description = "Scrape AI providers for endpoints, characteristics, and pricing; emit a YAML catalog."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
scrape-providers = "scrape_providers.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scrape_providers = ["catalog.schema.json", "agent_schemas/*.json", "agent_prompts/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # import the capture addon (scripts/) in tests
